# pyceo

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST  Makefile  README.md  README.rst  example.py  mm.py  publish.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
pyceo/: __init__.py  command.py  help_mixin.py  helpers.py  main.py  manager.py  params.py  utils.py  version.py
tests/: conftest.py  test_full.py  test_parser.py  test_pyceo.py
